--- a/index.html
+++ b/index.html
@@ -2,9 +2,58 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sb-moratuwa-embs</title>
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>Scholarverse - Your path to research begins here</title>
+    <meta
+      name="description"
+      content="Scholarverse inspires undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
+    />
+    <meta
+      name="keywords"
+      content="research, postgraduate, undergraduates, Sri Lanka, academic, scholarverse"
+    />
+    <meta name="author" content="EMBS Moratuwa" />
+    <meta
+      property="og:title"
+      content="Scholarverse - Your path to research begins here"
+    />
+    <meta
+      property="og:description"
+      content="Scholarverse inspires undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/a_researchers_guide.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Scholarverse - Your path to research begins here"
+    />
+    <meta
+      name="twitter:description"
+      content="Scholarverse inspires undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
+    />
+    <meta name="twitter:image" content="/a_researchers_guide.png" />
+
+    <meta name="theme-color" content="#25e3a7" />
   </head>
   <body>
     <div id="root"></div>
