removed scholarverse text

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
     />
     <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>Scholarverse - Your path to research begins here</title>
+    <title>A Researchers Guide - Your path to research begins here</title>
     <meta
       name="description"
-      content="Scholarverse inspires undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
+      content="Inspire undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
     />
     <meta
       name="keywords"
-      content="research, postgraduate, undergraduates, Sri Lanka, academic, scholarverse"
+      content="research, postgraduate, undergraduates, Sri Lanka, academic, researchers guide"
     />
-    <meta name="author" content="EMBS Moratuwa" />
+    <meta name="author" content="A Researchers Guide" />
     <meta
       property="og:title"
-      content="Scholarverse - Your path to research begins here"
+      content="A Researchers Guide - Your path to research begins here"
     />
     <meta
       property="og:description"
-      content="Scholarverse inspires undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
+      content="Inspire undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/a_researchers_guide.png" />
@@ -45,11 +45,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Scholarverse - Your path to research begins here"
+      content="A Researchers Guide - Your path to research begins here"
     />
     <meta
       name="twitter:description"
-      content="Scholarverse inspires undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
+      content="Inspire undergraduates across Sri Lanka to pursue advanced research and postgraduate studies by learning directly from world-recognized researchers."
     />
     <meta name="twitter:image" content="/a_researchers_guide.png" />
 
